Update Credit Card Eligibility.ipynb
File Path changed

--- a/Credit Card Eligibility.ipynb
+++ b/Credit Card Eligibility.ipynb
@@ -168,7 +168,7 @@
    },
    "outputs": [],
    "source": [
-    "customers = pd.read_csv('../input/Test 1.csv')"
+    "customers = pd.read_csv('creditcardeligibility.csv')"
    ]
   },
   {
